--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,1 @@
-RewriteEngine on
-DirectoryIndex install.php index.php
-RewriteRule ^projects/([^/]*)$ /project.php?p=$1 [L]
+DirectoryIndex router.php index.php
